--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
   "author": "Diego Araya",
   "type": "module",
   "main": "config.js",
+  "prisma": {
+    "seed": "node prisma/seeders/seed.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch src/index.js"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "prisma": "^7.2.0"
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
