--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "node --watch api/index.js",
+    "build": "npx prisma generate && npx prisma migrate deploy",
     "test": "vitest",
     "test:coverage": "vitest run --coverage"
   },
